--- a/.env.production
+++ b/.env.production
@@ -5,16 +5,16 @@ VITE_TITLE=Crazy Fly
 VITE_DESCRIPTION=Crazy Fly isn't just a game, it's a gateway to the exciting world of NFTs. 
 VITE_KEYWORDS=GameFi, NFT, blockchain, LSP8
 
-VITE_BASE_URL=http://localhost/crazyfly/api/
-VITE_API_URL=http://localhost/crazyfly/api/v1/
-VITE_UPLOAD_URL=http://localhost/crazyfly/api/uploads/images/
+VITE_BASE_URL=http://localhost/crazyflyapi/
+VITE_API_URL=http://localhost/crazyflyapi/v1/
+VITE_UPLOAD_URL=http://localhost/crazyflyapi/uploads/images/
 
 
 VITE_crazyfly_CONTRACT_TESTNET=
 VITE_crazyfly_CONTRACT_MAINNET=
 
 VITE_RPC_URL=
-VITE_IPFS_GATEWAY=https://ipfs.io/cid/
+VITE_IPFS_GATEWAY=https://ipfs.io/ipfs/
 
 VITE_GOOGLE_SITE_VERIFICATION=
 VITE_GOOGLE_ANALYTICS=
