--- a/.env.production
+++ b/.env.production
@@ -5,9 +5,9 @@ VITE_TITLE=Crazy Fly
 VITE_DESCRIPTION=Crazy Fly isn't just a game, it's a gateway to the exciting world of NFTs. 
 VITE_KEYWORDS=GameFi, NFT, blockchain, LSP8
 
-VITE_BASE_URL=http://localhost/crazyflyapi/
-VITE_API_URL=http://localhost/crazyflyapi/v1/
-VITE_UPLOAD_URL=http://localhost/crazyflyapi/uploads/images/
+VITE_BASE_URL=https://crazyfly.aratta.dev/
+VITE_API_URL=https://crazyfly.aratta.dev/v1/
+VITE_UPLOAD_URL=https://crazyfly.aratta.dev/uploads/images/
 
 
 VITE_crazyfly_CONTRACT_TESTNET=
